# async-job-ticket-system

./: .gitignore  ASYNC_JOB_TICKET_SYSTEM_PLAN.md  CURSOR_WORKFLOW.md  README.md  docker-compose.yml  pyproject.toml
docs/: api.md  architecture.md  deployment-options.md  deployment.md  iac-cloudformation-guide.md  manual-deployment-guide.md  quick-start.md  tech-guide.md
infra/aws-cli/: create-ecr-repos.sh  create-lambda.sh  create-queues.sh  create-table.sh  setup-parameter-store.sh
infra/cloudformation/: README.md  deploy.sh  teardown.sh
infra/ec2/: create-ec2-instance.sh  deploy-to-ec2.sh  docker-compose.prod.yml  user-data.sh
infra/ecs/: create-cluster.sh  create-iam-roles.sh  deploy-ecs.sh  task-definition-api.json  task-definition-worker.json
infra/iam/: ec2-instance-policy.json  ecs-task-execution-role-policy.json  lambda-policy.json  svc-api-policy.json  svc-worker-policy.json
k8s/base/: namespace.yaml
lambda/dlq-handler/: Untitled  requirements.txt  template.yaml
scripts/: deploy-k8s-local.sh  deploy.sh  local-dev.sh  teardown.sh
services/svc-api/: Dockerfile  pyproject.toml
services/svc-api/src/svc_api/: __init__.py  main.py
services/svc-api/src/svc_api/api/: routes.py  schemas.py
services/svc-api/src/svc_api/domain/: __init__.py  interfaces.py  job.py
services/svc-api/src/svc_api/infra/: dynamodb.py  logger.py  metrics.py  parameter_store.py  sqs.py  xray.py
services/svc-api/src/svc_api/service/: job_service.py
services/svc-api/tests/: conftest.py
services/svc-api/tests/unit/: test_job_service.py
services/svc-worker/: Dockerfile  pyproject.toml
services/svc-worker/src/svc_worker/: __init__.py  main.py
services/svc-worker/src/svc_worker/domain/: interfaces.py  job.py
services/svc-worker/src/svc_worker/infra/: dynamodb.py  logger.py  metrics.py  parameter_store.py  sqs.py  xray.py
services/svc-worker/src/svc_worker/service/: job_processor.py
services/svc-worker/tests/: __init__.py  conftest.py
services/svc-worker/tests/unit/: test_job_processor.py
(+16 files in other folders)
