[tool.poetry]
name = "svc-api"
version = "0.1.0"
description = "FastAPI service for job submission"
authors = ["Yariv Garala <yariv1052@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = {extras = ["email"], version = "^2.5.0"}
boto3 = "^1.29.0"
aws-xray-sdk = "^2.12.0"
structlog = "^23.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
moto = {extras = ["dynamodb", "sqs"], version = "^4.2.0"}
httpx = "^0.25.1"
ruff = "^0.1.6"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

