[tool.poetry]
name = "svc-worker"
version = "0.1.0"
description = "Worker service for processing jobs from SQS"
authors = ["Yariv Garala <yariv1052@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.29.0"
aws-xray-sdk = "^2.12.0"
structlog = "^23.2.0"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
moto = {extras = ["dynamodb", "sqs"], version = "^4.2.0"}
ruff = "^0.1.6"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

